Fix Kitty Stretching

--- a/styles.css
+++ b/styles.css
@@ -46,13 +46,16 @@
 
 #glory{
     margin-top:20%;
-    margin-left: 7%;
+    object-fit: contain; 
+    width: 100%; 
+    height: 100%;
 }
 
 #catspin{
     animation-name: spinkitty;
     animation-duration: 2s;
     animation-iteration-count: infinite;
+    object-fit: contain;
     width: 10%;
     height: 25%;
     margin-left:300px;
